# ABOUTME: Python project configuration for ADB MCP server
# ABOUTME: Defines dependencies and build settings for Android device tools

[project]
name = "adb-mcp"
version = "0.1.0"
description = "MCP server for Android Debug Bridge (adb) device interaction"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
adb-mcp = "adb_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adb_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
