# ABOUTME: Python project configuration for Frida MCP server
# ABOUTME: Defines dependencies for Android SSL pinning bypass and instrumentation

[project]
name = "frida-mcp"
version = "0.1.0"
description = "MCP server for Frida-based Android SSL pinning bypass"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "frida-tools>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
frida-mcp = "frida_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frida_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
