# ABOUTME: Python project configuration for mitmproxy MCP server
# ABOUTME: Defines dependencies and build settings for traffic interception tools

[project]
name = "mitmproxy-mcp"
version = "0.1.0"
description = "MCP server for mitmproxy traffic interception and inspection"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "mitmproxy>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mitmproxy-mcp = "mitmproxy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mitmproxy_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
